[package]
name = "sentry-log4rs"
version = "0.1.0"
authors = ["Fu Wang <wangfu91@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
sentry = "0.18.1"
serde = "1.0.125"
anyhow = "1.0.40"
derivative = "2.2.0"