[package]
name = "sentry-log4rs"
version = "0.1.0"
authors = ["Fu Wang <wangfu91@hotmail.com>"]
description = "log4s integration for Sentry."
homepage = "https://github.com/wangfu91/sentry-log4rs"
repository = "https://github.com/wangfu91/sentry-log4rs"
readme = "README.md"
keywords = ["log", "log4rs", "sentry", "error-reporting"]
categories = ["development-tools::debugging"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
sentry = "0.18.1"
serde = "1.0.125"
anyhow = "1.0.40"
derivative = "2.2.0"